# libserial-webassembly

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  SerialPort.cpp  SerialStream.cpp  SerialStreamBuf.cpp
src/libserial/: SerialPort.h  SerialPortConstants.h  SerialStream.h  SerialStreamBuf.h
tests/: build-main-cpp.sh  index.html  main.cpp
